--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="enter_the_otp_here">Enter the OTP here....</string>
     <string name="didn_t_receive_change_your_number">Didn\'t Receive ? Change Your Number</string>
     <string name="verify_otp">Verify OTP</string>
+    <string name="welcome">Welcome</string>
 </resources>
